# miniverse-engine

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Camera.cpp  Camera.h  KeyInput.cpp  KeyInput.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  miniverse-engine.cpp  miniverse-engine.h
shaders/: outline_vertex_shader.glsl
